# 5chbot

./: .gitignore  5chbot.cabal  LICENSE  README.md  config.json.example  stack.yaml
scripts/: spreadsheet_wrapper.py
src/: Main.hs  Settings.hs
src/Bot/: Config.hs  Core.hs  Csv.hs  Drive.hs  Parse.hs  Reddit.hs  Script.hs  Util.hs
