name:                5chbot
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/hithroc/5chbot#readme
license:             BSD3
license-file:        LICENSE
author:              Hithroc Mehatoko
maintainer:          contact@hithroc.org
copyright:           Hithroc Mehatoko
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable 5chbot
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
