name:                5chbot
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/hithroc/5chbot#readme
license:             BSD3
license-file:        LICENSE
author:              Hithroc Mehatoko
maintainer:          contact@hithroc.org
copyright:           Hithroc Mehatoko
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable 5chbot
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Bot.Reddit
                       Bot.Csv
                       Bot.Config
                       Bot.Parse
                       Bot.Drive
                       Bot.Util
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,reddit
                      ,text
                      ,transformers
                      ,aeson
                      ,bytestring
                      ,cassava
                      ,vector
                      ,parsec
                      ,google-drive
                      ,google-oauth2
                      ,http-conduit
                      ,http-types
                      ,conduit
                      ,unordered-containers
                      ,lens
                      ,wreq
                      ,directory
  default-extensions:  ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       EmptyCase
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MultiWayIf
                       OverloadedStrings
                       PatternSynonyms
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeFamilies
                       TypeOperators
                       TypeSynonymInstances
                       UndecidableInstances
                       ViewPatterns
