name:                5chbot
version:             1.0.1.0
synopsis:            A message broadcasting bot for /r/5cardhearthstone subreddit
description:         Please see README.md
homepage:            https://github.com/hithroc/5chbot#readme
license:             BSD3
license-file:        LICENSE
author:              Hithroc Mehatoko
maintainer:          contact@hithroc.org
copyright:           Hithroc Mehatoko
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable 5chbot
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Bot.Core
                       Bot.Config
                       Bot.Parse
                       Bot.Util
                       Settings
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                      ,reddit       == 0.2.*
                      ,text         == 1.2.*
                      ,transformers == 0.4.*
                      ,aeson        == 0.9.*
                      ,bytestring   == 0.10.*
                      ,parsec       == 3.1.*
                      ,directory    == 1.2.*
                      ,process      == 1.2.*
                      ,hslogger     == 1.2.*
                      ,hdaemonize   == 0.5.*
                      ,unix         == 2.7.*
  default-extensions:  ConstraintKinds
                       DataKinds
                       DefaultSignatures
                       DeriveFoldable
                       DeriveFunctor
                       DeriveGeneric
                       DeriveTraversable
                       EmptyCase
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTs
                       GeneralizedNewtypeDeriving
                       LambdaCase
                       MultiWayIf
                       OverloadedStrings
                       PatternSynonyms
                       PolyKinds
                       RankNTypes
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TemplateHaskell
                       TupleSections
                       TypeFamilies
                       TypeOperators
                       TypeSynonymInstances
                       UndecidableInstances
                       ViewPatterns
